some finishing touches

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -1,6 +1,21 @@
 {
- "nbformat": 4,
- "nbformat_minor": 2,
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Testing Jupyter notebook\n"
+    }
+   ],
+   "source": [
+    "print('Testing Jupyter notebook')"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python",
@@ -22,28 +37,6 @@
    "display_name": "Python 3.8.2 32-bit"
   }
  },
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": "Whats it all about?\n"
-    }
-   ],
-   "source": [
-    "print('Whats it all about?')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ]
+ "nbformat": 4,
+ "nbformat_minor": 2
 }
